Set babel and npm

--- a/package.json
+++ b/package.json
@@ -1,22 +1,16 @@
 {
-  "name": "Datos1.Proyecto3.Railspot",
+  "name": "react-boilerplate",
   "version": "1.0.0",
-  "description": "![](http://i.imgur.com/5Bqs5zi.png)",
-  "main": "gulpfile.js",
-  "dependencies": {},
-  "devDependencies": {},
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/moniwm/Datos1.Proyecto3.Railspot.git"
-  },
-  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/moniwm/Datos1.Proyecto3.Railspot/issues"
-  },
-  "homepage": "https://github.com/moniwm/Datos1.Proyecto3.Railspot#readme"
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.10",
+    "gulp-sass": "^2.3.1"
+  }
 }
