--- a/RailSpot.BackEnd/pom.xml
+++ b/RailSpot.BackEnd/pom.xml
@@ -42,6 +42,15 @@
 			<version>${jersey.version}</version>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.containers/project -->
+		<dependency>
+			<groupId>org.glassfish.jersey.containers</groupId>
+			<artifactId>project</artifactId>
+			<version>2.31</version>
+			<type>pom</type>
+		</dependency>
+
+
 		<dependency>
 			<groupId>asm</groupId>
 			<artifactId>asm</artifactId>
