Add init param in web.xml

--- a/RailSpot.BackEnd/WebContent/WEB-INF/web.xml
+++ b/RailSpot.BackEnd/WebContent/WEB-INF/web.xml
@@ -18,8 +18,12 @@
 		<servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
 
 		<init-param>
-			<param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
-			<param-value>true</param-value>
+			<param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+			<param-value>com.Project3.BackEnd.Filters.CORSFilter</param-value>
+		</init-param>
+		<init-param>
+			<param-name>com.sun.jersey.spi.container.ContainerResponseFilters</param-name>
+			<param-value>com.Project3.BackEnd.Filters.CORSFilter</param-value>
 		</init-param>
 		<load-on-startup>1</load-on-startup>
 	</servlet>
